# Sol_ID

./: .gitignore  .replit  README.md  claude.md  pnpm-lock.yaml  replit.md
anchor/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
anchor/programs/identity-reputation/: Cargo.toml
anchor/programs/identity-reputation/src/: lib.rs
anchor/tests/: identity-reputation.ts
artifacts/solana-dapp/: README.md  index.html  package.json
artifacts/solana-dapp/.replit-artifact/: artifact.toml
artifacts/solana-dapp/src/: App.tsx  index.css
artifacts/solana-dapp/src/components/: CreateProfile.tsx  Dashboard.tsx  ReviewWork.tsx  SubmitWork.tsx
artifacts/solana-dapp/src/hooks/: useProgram.ts
artifacts/solana-dapp/src/lib/: idl.ts  program.ts
artifacts/solana-dapp/src/pages/: Home.tsx
attached_assets/: Pasted-Scopes-define-the-access-for-personal-tokens-Read-more-_1777801286131.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectWallet.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useProgram.ts  useSnsLookup.ts
frontend/src/lib/: idl.ts  program.ts  trustConfig.ts
frontend/src/pages/: CreateProfile.tsx  Dashboard.tsx  EcosystemQuery.tsx  Leaderboard.tsx  Profile.tsx  SubmitWork.tsx  VerifyWork.tsx  WorkHistory.tsx
