[package]
name = "identity-reputation"
version = "0.1.0"
description = "Decentralized identity and reputation system built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_reputation"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
[patch.crates-io]
cpufeatures = "=0.2.12"
block-buffer = "=0.10.4"

